fix overflow

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,3 +1,8 @@
+* {
+  overflow-x: hidden;
+  overflow-y: auto;
+}
+
 body {
   /*padding: 50px;*/
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
@@ -101,14 +106,12 @@ a {
     font-size: 2rem;
 }
 .full {
-
   width: 100%;
   margin-left: 0px;
-  /*border:1px solid red;*/
 }
-.top:hover{
+/*.top:hover{
   transform: ;
-}
+}*/
 .imageHolder{
   display: flex;
   justify-content: center;
@@ -128,16 +131,16 @@ a {
   background-size: cover;
 }
 .thirdImage {
-  height: 35vh;
-  width: 35vw;
+  height: 35rem;
+  width: 35rem;
   background-image: url(/images/dodenver3.png);
   background-size: cover;
     /*background-attachment: fixed;*/
 
 }
 .fourthImage {
-  height: 35vh;
-  width: 35vw;
+  height: 35rem;
+  width: 35rem;
   background-image: url(/images/dodenverthree.png);
   background-size: cover;
     /*background-attachment: fixed;*/
@@ -148,11 +151,12 @@ a {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 60vh;
+  height: 60rem;
 }
 
 .explanation-text {
-  width: 75vw;
+  width: 120rem;
+
 }
 
 .container-fluid{
@@ -169,8 +173,8 @@ a {
 }
 
 .btn-lg {
-  height: 10vh;
-  width: 15vw;
+  height: 10rem;
+  width: 20rem;
   background: none;
   background-color: hsla(0,0%,90%, 0.65);
   font-size: 3rem;
